# BotCompanyBenchmarkProblem017

./: .gitignore  .tbc_pdb_meta  CMakeLists.txt  DATA_STRUCTURES.md  ORDER_SYSTEM_README.md  TBC_TASK.md  analyze_train_output.sh  basic_1_iris_test.txt  basic_1_sophie_time.txt  basic_2_actual_output.txt  basic_2_output.txt  basic_2_time.txt  basic_3_time.txt  basic_4_actual_output.txt  basic_4_time.txt  basic_5_time.txt  basic_6_time.txt  bptree.hpp  code 2  detailed_manual_test.txt  fileio.hpp  hashtable.hpp  leo_complete_test.in  leo_complete_test_output.txt  leo_correct_test.in  leo_correct_test_output.txt  leo_final_test.in  leo_manual_test.in  leo_manual_test_output.txt  leo_manual_test_v2.in  leo_manual_test_v2_output.txt  leo_manual_test_v3.in  leo_manual_test_v3_output.txt  leo_simple_test.in  leo_simple_test_output.txt  leo_with_release.in  leo_with_release_output.txt  main.cpp  manual_test.txt  order_system.hpp  (+60 more)
workspace/apollo/: note.md
workspace/ares/: milestone_m1_complete.md  note.md
workspace/athena/: cycle_brief.md  note.md
workspace/clara/: note.md
workspace/iris/: basic_1_evaluation_report.md  code_review_user_management.md  note.md  requirements_analysis.md  test_boundaries.in  test_boundaries_output.txt  test_edge_cases.in  test_edge_cases_output.txt  test_persistence.in  test_persistence2.in
workspace/magnus/: data_structures_verification_report.md  note.md
workspace/nathan/: note.md
workspace/olivia/: note.md
workspace/rachel/: basic_1_rachel_output.txt  note.md
workspace/sophie/: FINAL_REPORT.md  SUMMARY.txt  basic_1_output.txt  (+28 more)
(+470 files in other folders)
